hphp/hack/test/typecheck/parse_xhp_format_infinite_loop1.php
<?hh

class :foo extends :xhp {
      attribute "}
